fix: layout on mobile width

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -458,6 +458,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .left-1\/2 {
   left: 50%;
 }
+.left-\[200px\] {
+  left: 200px;
+}
 .top-\[5px\] {
   top: 5px;
 }
@@ -487,9 +490,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .z-\[2\] {
   z-index: 2;
-}
-.z-10 {
-  z-index: 10;
 }
 .z-50 {
   z-index: 50;
@@ -706,15 +706,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-1\/12 {
   width: 8.333333%;
-}
-.w-\[90\%\] {
-  width: 90%;
-}
-.w-\[95\%\] {
-  width: 95%;
-}
-.w-\[97\%\] {
-  width: 97%;
 }
 .min-w-max {
   min-width: -webkit-max-content;
@@ -1434,9 +1425,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-lg {
-  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .shadow-xl {
@@ -1444,9 +1435,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-2xl {
-  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
-  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none {
@@ -1965,10 +1956,6 @@ Ensure the default browser behavior of the `hidden` attribute.
     bottom: 5rem;
   }
 
-  .lg\:z-\[15\] {
-    z-index: 15;
-  }
-
   .lg\:z-\[5\] {
     z-index: 5;
   }
@@ -1981,6 +1968,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 100%;
   }
 
+  .lg\:w-\[97\%\] {
+    width: 97%;
+  }
+
   .lg\:w-\[163\%\] {
     width: 163%;
   }
@@ -1991,14 +1982,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .lg\:w-2\/5 {
     width: 40%;
-  }
-
-  .lg\:w-\[97\%\] {
-    width: 97%;
-  }
-
-  .lg\:w-\[98\%\] {
-    width: 98%;
   }
 
   .lg\:flex-1 {
